[admin] corrected issues with input alignements

--- a/portal/src/main/resources/public/admin/css/modules.less
+++ b/portal/src/main/resources/public/admin/css/modules.less
@@ -109,8 +109,6 @@ nav.left{
 input[type=text], select, label{
 	height: 25px;
 	line-height: 25px;
-	width: 200px;
-	margin: 3px
 }
 
 input[type=text]{
