--- a/portal/src/main/resources/public/admin/default/theme.less
+++ b/portal/src/main/resources/public/admin/default/theme.less
@@ -1,1 +1,5 @@
 @import "../css/modules";
+
+section.container{
+	padding-left: 300px;
+}
